src/objects/cec_Alert_Action__c.object
<CustomObject>
    <fields>
        <fullName>Alert_Rule_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alert Rule</label>
        <referenceTo>cec_Alert_Rule__c</referenceTo>
        <relationshipLabel>Alert Actions</relationshipLabel>
        <relationshipName>Alert_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category_Chatter_Group_Id__c</fullName>
        <description>CEC - Salesforce Id for the Chatter group 2</description>
        <label>Chatter Group2 Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Chatter_Group__c</fullName>
        <description>CEC - Chatter group name 2</description>
        <label>Chatter Group2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chatter_Template_Name__c</fullName>
        <description>CEC : Developer name of the email template to be used in Chatter</description>
        <inlineHelpText>Developer name of the email template</inlineHelpText>
        <label>Chatter Template Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Chatter_Group_Id__c</fullName>
        <description>CEC - Salesforce Id for the Chatter group 1</description>
        <label>Chatter Group1 Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Chatter_Group__c</fullName>
        <description>CEC - Chatter group name 1</description>
        <label>Chatter Group1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Name__c</fullName>
        <description>CEC -  Country Name used to filter Enclosure details</description>
        <label>Country Name</label>
        <picklist>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colombia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Costa Rica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Croatia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecuador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>El Salvador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estonia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greece</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guatemala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honduras</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iceland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indonesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ireland</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_Template_Name__c</fullName>
        <inlineHelpText>Developer name of the email template</inlineHelpText>
        <label>Email Template Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enclosure1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CEC - Enclosure1 look up to Enclosure</description>
        <label>Enclosure1</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6</booleanFilter>
            <filterItems>
                <field>cec_Enclosure__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Source.Country_Name__c</field>
                <operation>equals</operation>
                <valueField>cec_Enclosure__c.Country__c</valueField>
            </filterItems>
            <filterItems>
                <field>cec_Enclosure__c.Id</field>
                <operation>notEqual</operation>
                <valueField>$Source.Enclosure2__c</valueField>
            </filterItems>
            <filterItems>
                <field>cec_Enclosure__c.Id</field>
                <operation>notEqual</operation>
                <valueField>$Source.Enclosure3__c</valueField>
            </filterItems>
            <filterItems>
                <field>cec_Enclosure__c.Id</field>
                <operation>notEqual</operation>
                <valueField>$Source.Enclosure4__c</valueField>
            </filterItems>
            <filterItems>
                <field>cec_Enclosure__c.Id</field>
                <operation>notEqual</operation>
                <valueField>$Source.Enclosure5__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>cec_Enclosure__c</referenceTo>
        <relationshipLabel>Alert Actions</relationshipLabel>
        <relationshipName>Alert_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Enclosure2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CEC - Enclosure2 look up to Enclosure</description>
        <label>Enclosure2</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
            <filterItems>
                <field>cec_Enclosure__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Source.Country_Name__c</field>
                <operation>equals</operation>
                <valueField>cec_Enclosure__c.Country__c</valueField>
            </filterItems>
            <filterItems>
                <field>cec_Enclosure__c.Id</field>
                <operation>notEqual</operation>
                <valueField>$Source.Enclosure3__c</valueField>
            </filterItems>
            <filterItems>
                <field>cec_Enclosure__c.Id</field>
                <operation>notEqual</operation>
                <valueField>$Source.Enclosure4__c</valueField>
            </filterItems>
            <filterItems>
                <field>cec_Enclosure__c.Id</field>
                <operation>notEqual</operation>
                <valueField>$Source.Enclosure5__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>cec_Enclosure__c</referenceTo>
        <relationshipLabel>Alert Actions (Enclosure2)</relationshipLabel>
        <relationshipName>Alert_Actions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Enclosure3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CEC - Enclosure3 look up to Enclosure</description>
        <label>Enclosure3</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) AND (3 OR 4)</booleanFilter>
            <filterItems>
                <field>cec_Enclosure__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Source.Country_Name__c</field>
                <operation>equals</operation>
                <valueField>cec_Enclosure__c.Country__c</valueField>
            </filterItems>
            <filterItems>
                <field>cec_Enclosure__c.Id</field>
                <operation>notEqual</operation>
                <valueField>$Source.Enclosure4__c</valueField>
            </filterItems>
            <filterItems>
                <field>cec_Enclosure__c.Id</field>
                <operation>notEqual</operation>
                <valueField>$Source.Enclosure5__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>cec_Enclosure__c</referenceTo>
        <relationshipLabel>Alert Actions (Enclosure3)</relationshipLabel>
        <relationshipName>Alert_Actions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Popup_Message__c</fullName>
        <description>CEC: Popup Message</description>
        <label>Popup Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q10__c</fullName>
        <description>CEC : Questionnaire10 for Case Survey Links</description>
        <label>Q10</label>
        <picklist>
            <picklistValues>
                <fullName>CaseNumber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CaseOpenedDate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CaseOrigin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CaseOwner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ProductCode</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ProductCodeDesc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ProductionCode</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ReasonCodeDesc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ShortCode</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UsedProdPreviously</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verbatim</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q11__c</fullName>
        <label>Q11</label>
        <picklist>
            <picklistValues>
                <fullName>CaseNumber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CaseOpenedDate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CaseOrigin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CaseOwner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ProductCode</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ProductCodeDesc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ProductionCode</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ReasonCodeDesc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ShortCode</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UsedProdPreviously</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verbatim</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q12__c</fullName>
        <description>CEC : Questionnaire12 for Case Survey Links</description>
        <label>Q12</label>
        <picklist>
            <picklistValues>
                <fullName>CaseNumber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CaseOpenedDate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CaseOrigin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CaseOwner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ProductCode</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ProductCodeDesc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ProductionCode</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ReasonCodeDesc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ShortCode</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UsedProdPreviously</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verbatim</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey_Id__c</fullName>
        <description>CEC : To store the Case Survey Id.</description>
        <label>Survey Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Name__c</fullName>
        <description>CEC : To store the Case Survey Name</description>
        <label>Survey Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Chatter Post</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfilment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Popup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Questionnaire</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Alert Action</label>
    <nameField>
        <displayFormat>AA-{000000}</displayFormat>
        <label>Alert Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alert Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Alert_Type_Mandatory_Validation</fullName>
        <active>true</active>
        <description>Alert_Type_Mandatory_Validation</description>
        <errorConditionFormula>TEXT(Type__c) = null</errorConditionFormula>
        <errorDisplayField>Type__c</errorDisplayField>
        <errorMessage>Please enter an Alert Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CEC_AlertFulfilmentCheck</fullName>
        <active>true</active>
        <description>CEC - Enclosure detail is mandatory when Alert Type =Fulfilment</description>
        <errorConditionFormula>AND(

ISPICKVAL(Type__c, &quot;Fulfilment&quot;),
AND(ISBLANK(Enclosure1__c),
ISBLANK(Enclosure2__c),
ISBLANK(Enclosure3__c),
ISBLANK(Enclosure4__c),
ISBLANK(Enclosure5__c)
)
)</errorConditionFormula>
        <errorMessage>Please select value for Enclosure details as the type is &apos;Fulfilment&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CEC_ChatterPost_Validation</fullName>
        <active>true</active>
        <description>CEC - Template and atleast one group name details are mandatory</description>
        <errorConditionFormula>AND(
   ISPICKVAL(Type__c , &apos;Chatter Post&apos;),
OR(
   ISBLANK(Chatter_Template_Name__c),
AND(
   ISBLANK(Category_Chatter_Group__c),
   ISBLANK(Country_Chatter_Group__c)   
)
)   
)</errorConditionFormula>
        <errorMessage>For Type &apos;Chatter Post&apos; - &apos;Chatter Template Name&apos; and one of the  Chatter Group names are mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CEC_Survey_Validation</fullName>
        <active>true</active>
        <description>CEC_Survey Id and Survey Name cannot be left blank when the type is &apos;Questionnaire&apos;</description>
        <errorConditionFormula>AND(
  ISPICKVAL(Type__c , &apos;Questionnaire&apos;),
OR(
   ISBLANK(Survey_Id__c),
   ISBLANK(Survey_Name__c)
) 

)</errorConditionFormula>
        <errorMessage>Please enter value for Survey Id and Survey Name as the type is &apos;Questionnaire&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Email_Template_Name_Validation</fullName>
        <active>true</active>
        <description>Email Template Name is required when type is &apos;Email&apos;</description>
        <errorConditionFormula>AND( ISPICKVAL(Type__c, &apos;Email&apos;) ,  Email_Template_Name__c=null )</errorConditionFormula>
        <errorDisplayField>Email_Template_Name__c</errorDisplayField>
        <errorMessage>Please enter an Email Template name as the type is &apos;Email&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Popup_Message_Validation</fullName>
        <active>true</active>
        <description>Popup Label Name cannot be left blank as  the type is &apos;Popup&apos;</description>
        <errorConditionFormula>AND(TEXT(Type__c) = &apos;Popup&apos;, Popup_Message__c =null )</errorConditionFormula>
        <errorDisplayField>Popup_Message__c</errorDisplayField>
        <errorMessage>Please enter value for Popup message as the type is &apos;Popup&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>To_field_validation</fullName>
        <active>true</active>
        <description>To field cannot be left blank, when the type is &apos;Email&apos;</description>
        <errorConditionFormula>AND(TEXT(Type__c) = &apos;Email&apos;, To__c =null )</errorConditionFormula>
        <errorDisplayField>To__c</errorDisplayField>
        <errorMessage>Please enter value for &apos;To&apos; field as the type is &apos;Email&apos;</errorMessage>
    </validationRules>
</CustomObject>